--- a/css/accueil.css
+++ b/css/accueil.css
@@ -116,6 +116,12 @@ body {
   .carte_content {
     flex: 1;
   }
+  .footer {
+    background-color: #353535;
+  }
+  .footer {
+    background-color: #353535;
+  }
 }
 
 /*# sourceMappingURL=accueil.css.map */
