--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1,3 +1,65 @@
-.footer {
-  background-color: #353535;
+body,
+html {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  scroll-behavior: smooth;
+}
+
+.header {
+  padding: 1rem;
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+  position: relative;
+  z-index: 1000;
+  &__logo {
+    font-family: "Shrikhand", "cursive";
+    margin: 0;
+    text-align: center;
+  }
+  .footer {
+    background-color: #353535;
+
+    .contenu {
+      display: flex;
+      flex-direction: column;
+    }
+
+    &__logo {
+      color: white;
+      font-family: "Shrikhand", "cursive";
+      margin: 0;
+      font-size: 1.2rem;
+    }
+
+    &__list {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    &__listElt {
+      margin: 0.5rem 0;
+
+      &:first-child {
+        margin-top: 0;
+      }
+
+      &:last-child {
+        margin-bottom: 0%;
+      }
+    }
+
+    &__link {
+      color: white;
+      text-decoration: none;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+
+    &__icon {
+      width: 1.2rem;
+      margin-right: 0.5rem;
+    }
+  }
 }
