--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,395 @@
-/* Error: Undefined variable.
- *    ,
- * 54 |         $color-primary 0%,
- *    |         ^^^^^^^^^^^^^^
- *    '
- *   sass\menu.scss 54:9  @import
- *   sass\main.scss 5:9   root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a    \2577 \a 54 \2502          $color-primary 0%,\d\a    \2502          ^^^^^^^^^^^^^^\a    \2575 \a   sass\\menu.scss 54:9  @import\a   sass\\main.scss 5:9   root stylesheet";
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap");
+@keyframes annimationmenu {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
+body,
+html {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  scroll-behavior: smooth;
+}
+
+.header {
+  padding: 1rem;
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+  position: relative;
+  z-index: 1000;
+}
+.header__logo {
+  font-family: "Shrikhand", "cursive";
+  margin: 0;
+  text-align: center;
+}
+.header .footer {
+  background-color: #353535;
+}
+.header .footer__contenu {
+  display: flex;
+  flex-direction: column;
+}
+.header .footer__logo {
+  color: white;
+  font-family: "Shrikhand", "cursive";
+  margin: 0;
+  font-size: 1.2rem;
+}
+.header .footer__list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.header .footer__listElt {
+  margin: 0.5rem 0;
+}
+.header .footer__listElt:first-child {
+  margin-top: 0;
+}
+.header .footer__listElt:last-child {
+  margin-bottom: 0%;
+}
+.header .footer__link {
+  color: white;
+  text-decoration: none;
+}
+.header .footer__link:hover {
+  text-decoration: underline;
+}
+.header .footer__icon {
+  width: 1.2rem;
+  margin-right: 0.5rem;
+}
+
+html,
+body {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+}
+
+.header {
+  padding: 1rem;
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+  position: relative;
+}
+.header__logo {
+  text-align: center;
+}
+
+.taillelogo {
+  height: 2rem;
+}
+
+/*parite adress*/
+.adress {
+  display: flex;
+  justify-content: center;
+  padding: 1.25rem 1rem;
+  background-color: #f3f3f3;
+  font-size: 1.2rem;
+}
+
+.adress_icon {
+  margin-right: 1rem;
+}
+
+.adress_text {
+  font-weight: 500;
+}
+
+/*parie 1 text et btn*/
+.p1 {
+  padding: 2rem;
+  text-align: center;
+  background-color: #fafafa;
+}
+.p1_titre {
+  margin: 0;
+}
+.p1_text {
+  font-weight: 300;
+  margin: 1.5rem 0;
+}
+.p1_btn {
+  border: 0;
+  padding: 0.75rem 1.5rem;
+  font-weight: 500;
+  font-size: 1.1rem;
+  border-radius: 100px;
+  color: #fff;
+  background-color: #686868;
+  background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+  cursor: pointer;
+  transition-duration: 0.25s;
+  box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
+}
+
+/*partie choix*/
+.choix {
+  padding: 2rem;
+}
+.choix_title {
+  margin-top: 0;
+}
+.choix_steps {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  counter-reset: compteListe;
+}
+@media (min-width: 64rem) {
+  .choix_steps {
+    display: flex;
+  }
+}
+.choix_step {
+  padding: 1.5rem;
+  margin: 1rem 0 1rem 1rem;
+  box-shadow: 0.1rem 0.1rem 0.06rem black;
+  border-radius: 1.5rem;
+  background-color: #f6f6f6;
+  flex: 1;
+  display: flex;
+  position: relative;
+}
+.choix_step::before {
+  counter-increment: compteListe 1;
+  content: counter(compteListe) " ";
+  background: #9356dc;
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  position: absolute;
+  left: -0.75rem;
+}
+.choix_icon {
+  margin-right: 1rem;
+  color: #7e7e7e;
+}
+
+/*patie3 images*/
+.bloc_img {
+  background-color: #f6f6f6;
+  padding: 2rem 1rem;
+}
+
+.cartes {
+  display: grid;
+  column-gap: 2rem;
+  row-gap: 2rem;
+}
+@media (min-width: 64rem) {
+  .cartes {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+.carte {
+  background-color: #fff;
+  border-radius: 1rem;
+  position: relative;
+  text-decoration: none;
+  color: inherit;
+}
+.carte__img {
+  height: 12rem;
+  width: 100%;
+  border: 0 solid transparent;
+  border-radius: 1rem 1rem 0 0;
+  box-shadow: none;
+  object-fit: cover;
+}
+.carte__badge {
+  background-color: #07f8bb;
+  color: #1f8267;
+  padding: 0.4rem;
+  border-radius: 0.2rem;
+  position: absolute;
+  top: 1rem;
+  right: 0.7rem;
+}
+.carte__footer {
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+}
+.carte__content {
+  flex: 1;
+}
+
+.heroImg {
+  max-width: 100%;
+  max-height: 32rem;
+  width: 100%;
+  object-fit: cover;
+}
+
+.menu {
+  margin-top: -4rem;
+  border-radius: 2rem 2rem 0 0;
+  background-color: #f6f6f6;
+  z-index: 1;
+  position: relative;
+}
+.menu__header {
+  padding: 1rem 2rem 0 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.menu__titre {
+  font-family: "Shrikhand", "cursive";
+}
+.menu__btn {
+  height: 2rem;
+  width: 2rem;
+  background-color: transparent;
+  border: transparent 0px solid;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  position: relative;
+  background-color: black;
+}
+.menu__btn:hover::before {
+  opacity: 1;
+}
+.menu__btn::before {
+  opacity: 0;
+  transition: 0.5s;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(0deg);
+}
+
+.blocmenus {
+  display: grid;
+}
+@media (min-width: 64rem) {
+  .blocmenus {
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1rem;
+  }
+}
+
+.blocmenu {
+  max-width: 100%;
+  overflow: hidden;
+  padding: 0 1rem;
+}
+.blocmenu__titre {
+  text-transform: uppercase;
+  position: relative;
+  padding-bottom: 0.5rem;
+  font-weight: normal;
+}
+.blocmenu__titre::after {
+  content: "";
+  width: 3rem;
+  height: 0.25rem;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.menucart {
+  background-color: white;
+  padding: 1rem;
+  display: flex;
+  border-radius: 0.75rem;
+  margin: 1rem 0;
+  box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  cursor: pointer;
+  animation: annimationmenu 0.6s;
+  animation-timing-function: cubic-bezier(0.5, 1.58, 0.34, 0.82);
+  animation-fill-mode: both;
+  transform: scale(0);
+  max-width: 100%;
+}
+.menucart__header {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  flex: 1;
+}
+.menucart__titre {
+  margin: 0;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.menucart__description {
+  margin: 0;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.menucart__price {
+  font-weight: bold;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  padding-left: 0.5rem;
+}
+.menucart__confirmation {
+  margin: -1rem -5rem -1rem 1rem;
+  width: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition-duration: 0.5s;
+}
+.menucart:hover .menucart__confirmation {
+  margin-right: -1rem;
+}
+.menucart__wrapIcon {
+  height: 1.6rem;
+  width: 1.6rem;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100px;
+  transform: rotate(180deg);
+  transition-duration: 0.5s;
+}
+.menucart:hover .menucart__wrapIcon {
+  transform: rotate(0);
+}
+
+wrapBtn {
+  display: flex;
+  text-decoration: none;
+  justify-content: center;
+  padding: 3rem 0;
+}
+
+.commandBtn {
+  border: 0;
+  padding: 0.75rem 1.5rem;
+  font-weight: 500;
+  font-size: 1.1rem;
+  border-radius: 100px;
+  color: #fff;
+  background-color: #686868;
+  background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+  transition-duration: 0.25s;
+  box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+}
+
+/*# sourceMappingURL=main.css.map */
