--- a/sass/accueil.scss
+++ b/sass/accueil.scss
@@ -1,123 +1,160 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&family=Shrikhand&family=Source+Serif+Pro:wght@200;300&display=swap");
-@media screen and (max-width: 768px) {
-  html,
-  body {
-    margin: 0;
-    font-family: "Roboto", sans-serif;
-  }
-  .header {
-    padding: 1rem;
-    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
-    position: relative;
-  }
-  /*parite adress*/
-  .adress {
-    display: flex;
-    justify-content: center;
-    padding: 1.25rem 1rem;
-    background-color: #f3f3f3;
-    font-size: 1.2rem;
-  }
-  .adress_icon {
-    margin-right: 1rem;
-  }
-  .adress_text {
-    font-weight: 500;
-  }
-  /*parie 1 text et btn*/
-  .p1 {
-    padding: 2rem;
+html,
+body {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+}
+.header {
+  padding: 1rem;
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+  position: relative;
+
+  &__logo {
     text-align: center;
-    background-color: #fafafa;
+  }
+}
+.taillelogo {
+  height: 2rem;
+}
 
-    &_titre {
-      margin: 0;
-    }
-    &_text {
-      font-weight: 300;
-      margin: 1.5rem 0;
-    }
-    &_btn {
-      border: 0;
-      padding: 0.75rem 1.5rem;
-      border-radius: 100px;
-      color: #fff;
-      background-color: #9356dc;
-      cursor: pointer;
-      box-shadow: 0.25rem 0.25rem 10px;
-    }
+/*parite adress*/
+.adress {
+  display: flex;
+  justify-content: center;
+  padding: 1.25rem 1rem;
+  background-color: #f3f3f3;
+  font-size: 1.2rem;
+}
+.adress_icon {
+  margin-right: 1rem;
+}
+.adress_text {
+  font-weight: 500;
+}
+/*parie 1 text et btn*/
+.p1 {
+  padding: 2rem;
+  text-align: center;
+  background-color: #fafafa;
+
+  &_titre {
+    margin: 0;
+  }
+  &_text {
+    font-weight: 300;
+    margin: 1.5rem 0;
+  }
+  &_btn {
+    border: 0;
+    padding: 0.75rem 1.5rem;
+    font-weight: 500;
+    font-size: 1.1rem;
+    border-radius: 100px;
+    color: #fff;
+    background-color: #686868;
+    background-image: linear-gradient(
+      0deg,
+      rgba(147, 86, 220, 0.9),
+      rgba(255, 121, 218, 0.9)
+    );
+    cursor: pointer;
+    transition-duration: 0.25s;
+    box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
+  }
+}
+
+/*partie choix*/
+
+.choix {
+  padding: 2rem;
+
+  &_title {
+    margin-top: 0;
   }
 
-  /*partie choix*/
+  &_steps {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    counter-reset: compteListe;
 
-  .choix {
-    padding: 2rem;
-
-    &_title {
-      margin-top: 0;
-    }
-
-    &_steps {
-      margin: 0;
-      padding: 0;
-    }
-    &_step {
-      padding: 1.5rem;
-      margin: 1rem 0 1rem 0.8rem;
-      box-shadow: 0.1rem 0.1rem 0.06rem black;
-      border-radius: 1.5rem;
-      background-color: #f6f6f6;
+    @media (min-width: 64rem) {
       display: flex;
-      position: relative;
-    }
-    &_icon {
-      margin-right: 1rem;
-      color: #7e7e7e;
     }
   }
-  /*patie3 images*/
-  .bloc_img {
+
+  &_step {
+    padding: 1.5rem;
+    margin: 1rem 0 1rem 1rem;
+    box-shadow: 0.1rem 0.1rem 0.06rem black;
+    border-radius: 1.5rem;
     background-color: #f6f6f6;
-    padding: 2rem 1rem;
-  }
-  .cartes {
-    display: grid;
-    row-gap: 2rem;
-  }
-  .carte {
-    background-color: #fff;
-    border-radius: 1rem;
+    flex: 1;
+    display: flex;
     position: relative;
-    text-decoration: none;
-    color: inherit;
-
-    &__img {
-      height: 12rem;
-      width: 100%;
-      border: 0 solid transparent;
-      border-radius: 1rem 1rem 0 0;
-      box-shadow: none;
-      object-fit: cover;
-    }
-    &__badge {
-      background-color: #07f8bb;
-      color: #1f8267;
-      padding: 0.4rem;
-      border-radius: 0.2rem;
-      position: absolute;
-      top: 1rem;
-      right: 0.7rem;
-    }
-    &__footer {
-      padding: 1rem;
+    &::before {
+      counter-increment: compteListe 1;
+      content: counter(compteListe) " ";
+      background: #9356dc;
+      height: 1.5rem;
+      width: 1.5rem;
+      border-radius: 100px;
       display: flex;
+      justify-content: center;
       align-items: center;
-    }
-    &__content {
-      flex: 1;
+      color: #fff;
+      position: absolute;
+      left: -0.75rem;
     }
   }
-  .footer {
-    background-color: #353535;
+
+  &_icon {
+    margin-right: 1rem;
+    color: #7e7e7e;
+  }
+}
+/*patie3 images*/
+.bloc_img {
+  background-color: #f6f6f6;
+  padding: 2rem 1rem;
+}
+.cartes {
+  display: grid;
+  column-gap: 2rem;
+  row-gap: 2rem;
+  @media (min-width: 64rem) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+.carte {
+  background-color: #fff;
+  border-radius: 1rem;
+  position: relative;
+  text-decoration: none;
+  color: inherit;
+
+  &__img {
+    height: 12rem;
+    width: 100%;
+    border: 0 solid transparent;
+    border-radius: 1rem 1rem 0 0;
+    box-shadow: none;
+    object-fit: cover;
+  }
+  &__badge {
+    background-color: #07f8bb;
+    color: #1f8267;
+    padding: 0.4rem;
+    border-radius: 0.2rem;
+    position: absolute;
+    top: 1rem;
+    right: 0.7rem;
+  }
+  &__footer {
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+  }
+  &__content {
+    flex: 1;
   }
 }
