--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -49,11 +49,7 @@
       left: 0;
       height: 100%;
       width: 100%;
-      background: linear-gradient(
-        0deg,
-        $color-primary 0%,
-        $color-secondary 100%
-      );
+      background: linear-gradient(0deg);
     }
   }
 }
@@ -64,116 +60,124 @@
     grid-template-columns: repeat(3, 1fr);
     column-gap: 1rem;
   }
-  .blocmenu {
-    max-width: 100%;
-    overflow: hidden;
-    padding: 0 1rem;
+}
+.blocmenu {
+  max-width: 100%;
+  overflow: hidden;
+  padding: 0 1rem;
 
-    &__titre {
-      text-transform: uppercase;
-      position: relative;
-      padding-bottom: 0.5rem;
-      font-weight: normal;
+  &__titre {
+    text-transform: uppercase;
+    position: relative;
+    padding-bottom: 0.5rem;
+    font-weight: normal;
 
-      &::after {
-        content: "";
-        width: 3rem;
-        height: 0.25rem;
-        background-color: $color-tertiary;
-        position: absolute;
-        left: 0;
-        bottom: 0;
-      }
+    &::after {
+      content: "";
+      width: 3rem;
+      height: 0.25rem;
+
+      position: absolute;
+      left: 0;
+      bottom: 0;
     }
   }
+}
 
-  .menucart {
-    background-color: white;
-    padding: 1rem;
-    display: flex;
-    border-radius: 0.75rem;
-    margin: 1rem 0;
-    box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.1);
+.menucart {
+  background-color: white;
+  padding: 1rem;
+  display: flex;
+  border-radius: 0.75rem;
+  margin: 1rem 0;
+  box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  cursor: pointer;
+  animation: annimationmenu 0.6s;
+  animation-timing-function: cubic-bezier(0.5, 1.58, 0.34, 0.82);
+  animation-fill-mode: both;
+  transform: scale(0);
+  max-width: 100%;
+
+  &__header {
+    white-space: nowrap;
+    text-overflow: ellipsis;
     overflow: hidden;
-    cursor: pointer;
-    animation: itemAppear 0.6s;
-    animation-timing-function: cubic-bezier(0.5, 1.58, 0.34, 0.82);
-    animation-fill-mode: both;
-    transform: scale(0);
-    max-width: 100%;
-
-    &__header {
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
-      flex: 1;
-    }
-
-    &__titre {
-      margin: 0;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
-    }
-
-    &__description {
-      margin: 0;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
-    }
-
-    &__price {
-      font-weight: bold;
-      display: flex;
-      justify-content: flex-end;
-      align-items: flex-end;
-      padding-left: 0.5rem;
-    }
-
-    &__confirmation {
-      background-color: $color-tertiary;
-      margin: -1rem -5rem -1rem 1rem;
-      width: 4rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition-duration: 0.5s;
-    }
-
-    &:hover &__confirmation {
-      margin-right: -1rem;
-    }
-
-    &__wrapIcon {
-      height: 1.6rem;
-      width: 1.6rem;
-      background-color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 100px;
-      transform: rotate(180deg);
-      transition-duration: 0.5s;
-    }
-
-    &:hover &__wrapIcon {
-      transform: rotate(0);
-    }
-
-    &__icon {
-      color: $color-tertiary;
-    }
+    flex: 1;
   }
-  wrapBtn {
+
+  &__titre {
+    margin: 0;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+
+  &__description {
+    margin: 0;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+
+  &__price {
+    font-weight: bold;
     display: flex;
-    text-decoration: none;
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding-left: 0.5rem;
+  }
+
+  &__confirmation {
+    margin: -1rem -5rem -1rem 1rem;
+    width: 4rem;
+    display: flex;
+    align-items: center;
     justify-content: center;
-    padding: 3rem 0;
+    transition-duration: 0.5s;
   }
 
-  .commandBtn {
-    @include button(primary);
-    cursor: pointer;
+  &:hover &__confirmation {
+    margin-right: -1rem;
   }
+
+  &__wrapIcon {
+    height: 1.6rem;
+    width: 1.6rem;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100px;
+    transform: rotate(180deg);
+    transition-duration: 0.5s;
+  }
+
+  &:hover &__wrapIcon {
+    transform: rotate(0);
+  }
+}
+wrapBtn {
+  display: flex;
+  text-decoration: none;
+  justify-content: center;
+  padding: 3rem 0;
+}
+
+.commandBtn {
+  border: 0;
+  padding: 0.75rem 1.5rem;
+  font-weight: 500;
+  font-size: 1.1rem;
+  border-radius: 100px;
+  color: #fff;
+  background-color: #686868;
+  background-image: linear-gradient(
+    0deg,
+    rgba(147, 86, 220, 0.9),
+    rgba(255, 121, 218, 0.9)
+  );
+  transition-duration: 0.25s;
+  box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
 }
