--- a/sass/animation.scss
+++ b/sass/animation.scss
@@ -6,3 +6,43 @@
     transform: scale(1);
   }
 }
+
+.loaderwarpp {
+  width: 100vw;
+  height: 100vh;
+  background: white;
+  position: fixed;
+  z-index: 10002;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation: disappear 2s forwards;
+  animation-delay: 0s;
+}
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes disappear {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+    z-index: -1;
+  }
+}
