--- a/sass/accueil.scss
+++ b/sass/accueil.scss
@@ -3,15 +3,6 @@ body {
   margin: 0;
   font-family: "Roboto", sans-serif;
 }
-.header {
-  padding: 1rem;
-  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
-  position: relative;
-
-  &__logo {
-    text-align: center;
-  }
-}
 .taillelogo {
   height: 2rem;
 }
@@ -57,8 +48,12 @@ body {
       rgba(255, 121, 218, 0.9)
     );
     cursor: pointer;
-    transition-duration: 0.25s;
+
     box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
+    &:hover {
+      scale: 1;
+      transition-duration: 0.25s;
+    }
   }
 }
 
