--- a/sass/base.scss
+++ b/sass/base.scss
@@ -15,51 +15,70 @@ html {
     margin: 0;
     text-align: center;
   }
-  .footer {
-    background-color: #353535;
+}
+.footer {
+  background-color: #353535;
 
-    &__contenu {
-      display: flex;
-      flex-direction: column;
+  &__contenu {
+    display: flex;
+    flex-direction: column;
+    margin-left: 1.5rem;
+  }
+
+  &__logo {
+    color: white;
+    font-family: "Shrikhand", "cursive";
+    margin: 0;
+    font-size: 1.2rem;
+  }
+
+  &__list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  &__listElt {
+    margin: 0.5rem 0;
+
+    &:first-child {
+      margin-top: 0;
     }
 
-    &__logo {
-      color: white;
-      font-family: "Shrikhand", "cursive";
-      margin: 0;
-      font-size: 1.2rem;
+    &:last-child {
+      margin-bottom: 0%;
     }
+  }
 
-    &__list {
-      list-style: none;
-      padding: 0;
-      margin: 0;
+  &__link {
+    color: white;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
     }
+  }
 
-    &__listElt {
-      margin: 0.5rem 0;
-
-      &:first-child {
-        margin-top: 0;
-      }
-
-      &:last-child {
-        margin-bottom: 0%;
-      }
+  &__icon {
+    width: 1.2rem;
+    margin-right: 0.5rem;
+  }
+  .likfas {
+    margin-left: 1rem;
+    opacity: 0;
+    &:hover {
+      opacity: 1;
+      transition: all 0.2s ease-in-out;
+      background-clip: "text";
+      -webkit-text-fill-color: transparent;
+      background: linear;
     }
-
-    &__link {
-      color: white;
-      text-decoration: none;
-
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-
-    &__icon {
-      width: 1.2rem;
-      margin-right: 0.5rem;
+  }
+  .likfar {
+    opacity: 1;
+    transition: all 0.2s ease;
+    &:hover {
+      opacity: 1;
     }
   }
 }
