--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -4,6 +4,19 @@
   width: 100%;
   object-fit: cover;
 }
+.btn-retour {
+  position: absolute;
+  left: 2rem;
+  height: 2rem;
+  width: 2rem;
+  top: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translateY(-50%);
+  font-size: 1.2rem;
+  color: #000;
+}
 
 .menu {
   margin-top: -4rem;
@@ -34,25 +47,21 @@
     justify-content: center;
     cursor: pointer;
     position: relative;
-    background-color: black;
+  }
 
-    &:hover::before {
-      opacity: 1;
-    }
-
-    &::before {
-      opacity: 0;
-      transition: 0.5s;
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background: linear-gradient(0deg);
-    }
+  &::before {
+    opacity: 0;
+    transition: 0.5s;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(0deg);
   }
 }
+
 .blocmenus {
   display: grid;
 
@@ -129,6 +138,7 @@
   }
 
   &__confirmation {
+    background-color: #99e2d0;
     margin: -1rem -5rem -1rem 1rem;
     width: 4rem;
     display: flex;
@@ -156,28 +166,16 @@
   &:hover &__wrapIcon {
     transform: rotate(0);
   }
-  wrapBtn {
-    display: flex;
-    text-decoration: none;
-    justify-content: center;
-    padding: 3rem 0;
-  }
+}
+.wrapBtn {
+  display: flex;
+  text-decoration: none;
+  justify-content: center;
+  padding: 3rem 0;
+}
 
-  .commandBtn {
-    border: 0;
-    padding: 0.75rem 1.5rem;
-    font-weight: 500;
-    font-size: 1.1rem;
-    border-radius: 100px;
-    color: #fff;
-    background-color: #686868;
-    background-image: linear-gradient(
-      0deg,
-      rgba(147, 86, 220, 0.9),
-      rgba(255, 121, 218, 0.9)
-    );
-    transition-duration: 0.25s;
-    box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
-    cursor: pointer;
+@for $i from 0 to 9 {
+  .delay-#{$i} {
+    animation-delay: #{$i/10}s;
   }
 }
