--- a/sass/base.scss
+++ b/sass/base.scss
@@ -4,7 +4,6 @@ html {
   font-family: "Roboto", sans-serif;
   scroll-behavior: smooth;
 }
-
 .header {
   padding: 1rem;
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
@@ -63,22 +62,47 @@ html {
     width: 1.2rem;
     margin-right: 0.5rem;
   }
-  .likfas {
-    margin-left: 1rem;
-    opacity: 0;
-    &:hover {
-      opacity: 1;
-      transition: all 0.2s ease-in-out;
-      background-clip: "text";
-      -webkit-text-fill-color: transparent;
-      background: linear;
-    }
-  }
-  .likfar {
+}
+.likefas {
+  margin-left: -2.25rem;
+  opacity: 0;
+  &:hover {
     opacity: 1;
-    transition: all 0.2s ease;
-    &:hover {
-      opacity: 1;
-    }
+    transition: all 0.2s ease-in-out;
+    -webkit-text-fill-color: transparent;
+    background: linear-gradient(
+      0deg,
+      rgba(147, 86, 220, 0.9),
+      rgba(255, 121, 218, 0.9)
+    );
+  }
+}
+.likefar {
+  opacity: 1;
+  transition: all 0.2s ease;
+  &:hover {
+    opacity: 0;
+  }
+}
+.btn {
+  border: 0;
+  padding: 0.75rem 1.5rem;
+  font-weight: 500;
+  font-size: 1.1rem;
+  border-radius: 100px;
+  color: #fff;
+  background-color: #686868;
+  background-image: linear-gradient(
+    0deg,
+    rgba(147, 86, 220, 0.9),
+    rgba(255, 121, 218, 0.9)
+  );
+  cursor: pointer;
+  box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
+  &:hover {
+    background-color: #f6f6f6;
+    scale: 1;
+    transition-duration: 0.25s;
+    box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.51);
   }
 }
