--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -49,7 +49,7 @@
     position: relative;
   }
 
-  &::before {
+  /*&::before {
     opacity: 0;
     transition: 0.5s;
     content: "";
@@ -59,7 +59,7 @@
     height: 100%;
     width: 100%;
     background: linear-gradient(0deg);
-  }
+  }*/
 }
 
 .blocmenus {
@@ -85,7 +85,7 @@
       content: "";
       width: 3rem;
       height: 0.25rem;
-
+      background-color: #99e2d0;
       position: absolute;
       left: 0;
       bottom: 0;
@@ -167,7 +167,7 @@
     transform: rotate(0);
   }
 }
-.wrapBtn {
+.centrerBtn {
   display: flex;
   text-decoration: none;
   justify-content: center;
