--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -49,7 +49,7 @@
     position: relative;
   }
 
-  /*&::before {
+  &::before {
     opacity: 0;
     transition: 0.5s;
     content: "";
@@ -59,7 +59,7 @@
     height: 100%;
     width: 100%;
     background: linear-gradient(0deg);
-  }*/
+  }
 }
 
 .blocmenus {
