--- a/css/main.css
+++ b/css/main.css
@@ -104,20 +104,20 @@ html {
   margin-right: 0.5rem;
 }
 
+.postion {
+  position: relative;
+}
+
 .likefas {
   opacity: 0;
-}
-.likefas__margemenu {
-  margin-left: -1.6rem;
-}
-.likefas__margeindex {
-  margin-left: -2.21rem;
+  position: absolute;
+  left: 0;
 }
 .likefas:hover {
   opacity: 1;
   transition: all 0.2s ease-in-out;
   background: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
-  background-clip: text;
+  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
@@ -311,7 +311,6 @@ body {
   margin-top: -4rem;
   border-radius: 2rem 2rem 0 0;
   background-color: #f6f6f6;
-  z-index: 1;
   position: relative;
 }
 .menu__header {
@@ -338,7 +337,6 @@ body {
 .menu::before {
   opacity: 0;
   transition: 0.5s;
-  content: "";
   position: absolute;
   top: 0;
   left: 0;
