--- a/sass/base.scss
+++ b/sass/base.scss
@@ -62,14 +62,13 @@ html {
     margin-right: 0.5rem;
   }
 }
+.postion{
+  position: relative;
+}
 .likefas {
   opacity: 0;
-  &__margemenu {
-    margin-left: -1.6rem;
-  }
-  &__margeindex {
-    margin-left: -2.21rem;
-  }
+  position: absolute;
+  left: 0;
   &:hover {
     opacity: 1;
     transition: all 0.2s ease-in-out;
@@ -78,7 +77,7 @@ html {
       rgba(147, 86, 220, 0.9),
       rgba(255, 121, 218, 0.9)
     );
-    background-clip: text;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
 }
@@ -109,5 +108,6 @@ html {
     scale: 1;
     transition-duration: 0.25s;
     box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.51);
+  
   }
 }
