--- a/sass/accueil.scss
+++ b/sass/accueil.scss
@@ -66,7 +66,7 @@ body {
     display: flex;
     position: relative;
     &:hover{
-      background: #ebe7ef;
+      background: #fbeef7;
       cursor: pointer;
       transform: scale(1.05);
      
