projet_final_aprés_les_modification

--- a/css/main.css
+++ b/css/main.css
@@ -161,6 +161,12 @@ body {
   margin-right: 1rem;
 }
 
+.input {
+  border: 0;
+  outline: 0;
+  background-color: transparent;
+}
+
 .adress_text {
   font-weight: 500;
 }
