--- a/sass/accueil.scss
+++ b/sass/accueil.scss
@@ -18,6 +18,8 @@ body {
 .adress_icon {
   margin-right: 1rem;
 }
+.input {border:0;outline:0; background-color: transparent;}
+
 .adress_text {
   font-weight: 500;
 }
