--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,7 @@ html {
   color: white;
   text-decoration: none;
 }
-.footer__link:hover {
+.footer:hover {
   text-decoration: underline;
 }
 .footer__icon {
@@ -156,19 +156,17 @@ body {
   background-color: #f3f3f3;
   font-size: 1.2rem;
 }
-
 .adress_icon {
   margin-right: 1rem;
+}
+.adress_text {
+  font-weight: 500;
 }
 
 .input {
   border: 0;
   outline: 0;
   background-color: transparent;
-}
-
-.adress_text {
-  font-weight: 500;
 }
 
 /*parie 1 text et btn*/
